# suction_control

./: CMakeLists.txt  package.xml
config/: suction_control.yaml  suction_control_r1.yaml  suction_control_r2.yaml
include/: r2_suction_control.h  suction_control.h
launch/: suction_control.launch.py  suction_control_r1.launch.py  suction_control_r2.launch.py
src/: r2_suction_control.cpp  suction_control.cpp
srv/: SetSuction.srv
